The `#body-container` has prevented the `menu-title` from being displayed, so we will revert back to the previous state once.

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -40,7 +40,7 @@
 
     <script src="{{ path_to_root }}start.js" id="start" data-defaulttheme="{{ default_theme }}"></script>
 
-    <div id="body-container">
+<!--<div id="body-container">-->
       <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
           {{#toc}}{{/toc}}
@@ -137,7 +137,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!--</div>-->
 
     {{#if search_js}}
     <script src="{{ path_to_root }}elasticlunr.min.js"></script>
