--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -122,13 +122,13 @@
                 </a>
               {{/next}}
             </nav>
-
           </main>
+
+          <spacer></spacer>
 
           <div class="sidetoc">
             <nav class="pagetoc"></nav>
           </div>
-
         </div>
       </div>
     </div>
