Arrange the entire structure. 🐔
🐤 Place `sidebar` within `content`
🐤 Rename `sidetoc` to `righttoc`
🐤 Remove parameters that do not seem to be used

🐣 I have been plotting the possibility of putting the sidebar under flex management,
   but it seems to be more work than I thought, so I'm going to take a break.

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -1,14 +1,14 @@
 @use 'variables' as var;
 
 @media only screen and (max-width: var.$enable-pagetoc) {
-  .sidetoc {
+  .righttoc {
     display: none;
     flex-basis: 0%;
   }
 }
 
 @media only screen and (min-width: var.$enable-pagetoc) {
-  .sidetoc {
+  .righttoc {
     flex-basis: 20%;
   }
   .pagetoc {
@@ -56,7 +56,7 @@
 }
 
 @media print {
-  .sidetoc {
+  .righttoc {
     display: none;
   }
 }
