Maybe I made a mistake in the path of the icon. 👾

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://coralpink.github.io/commentary/">
 
     <meta name="twitter:card" content="summary_image">
-    <link rel="apple-touch-icon" href="favicon.png" sizes="100x100">
+    <link rel="apple-touch-icon" href="{{ path_to_root }}favicon.png" sizes="100x100">
 
     {{#if favicon_svg}}
     <link rel="icon" href="{{ path_to_root }}favicon.svg">
