Let's cheer for Ohtani-san today! ⚾
Try to bring back the color of the scroll bars.

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,6 +4,7 @@ $sidebar-width: 210px;
 $pagetoc-width: 200px;
 $enable-pagetoc: $mobile-max-width + $pagetoc-width;
 
+$scrollbar-width: 7px;
 $menu-bar-height: 50px;
 $searchbar-max-width: 100rem;
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
