--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -5,7 +5,6 @@
 }
 
 html {
-  scrollbar-color: var(--scrollbar) var(--bg);
   scroll-behavior: smooth;
 }
 
@@ -13,6 +12,22 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: var(--fg);
   background-color: var(--bg);
+
+  scrollbar-color: var(--scrollbar) var(--bg);
+
+  &::-webkit-scrollbar {
+    width: var.$scrollbar-width;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--bg);
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: var(--scrollbar);
+    border-radius: 10px;
+  }
 }
 
 code {
