--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="{{ language }}" class="sidebar-visible no-js {{ default_theme }}">
+<html lang="{{ language }}" class="sidebar-visible {{ default_theme }}">
   <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
