--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -88,7 +88,7 @@ code {
   img,
   video {
     display: flex;
-    margin: 0 auto;
+    margin: 1rem auto;
     max-width: 100%;
     height: auto;
   }
