I hear it can handle Japanese searches, so I'll give it a try 🦖
refs: Support CJK (mutiple language) search #2052
https://github.com/rust-lang/mdBook/issues/2052

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -88,7 +88,7 @@
         {{#if search_enabled}}
         <div id="search-wrapper" class="hidden">
           <form id="searchbar-outer" class="searchbar-outer">
-            <input type="search" id="searchbar" name="searchbar" placeholder="Search this book (English only) ..."
+            <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..."
               aria-controls="searchresults-outer" aria-describedby="searchresults-header">
           </form>
           <div id="searchresults-outer" class="searchresults-outer hidden">
