--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -7,7 +7,7 @@
 
   font-style: italic;
 
-  margin-top: 0 - var.$menu-bar-height;
+  margin-top: 24px - var.$menu-bar-height;
   padding-top: var.$menu-bar-height;
 
   &:target {
