Page Layout Optimization.

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -9,7 +9,7 @@
 
 @media only screen and (min-width: var.$enable-pagetoc) {
   .righttoc {
-    flex-basis: 20%;
+    flex-basis: 30em;
   }
   .pagetoc {
     position: fixed;
