--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,7 @@ $mobile-max-width: 680px;
 $sidebar-width: 210px;
 $pagetoc-width: 200px;
 $enable-pagetoc: $mobile-max-width + $pagetoc-width;
+$spacer-width: 5rem;
 
 $scrollbar-width: 7px;
 $menu-bar-height: 50px;
