--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -36,98 +36,95 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <script src="{{ path_to_root }}start.js" id="start" data-defaulttheme="{{ default_theme }}"></script>
+    <div id="sidebar" class="sidebar" aria-label="Table of contents">
+      <nav class="sidebar-scrollbox">
+        {{#toc}}{{/toc}}
+      </nav>
+    </div>
 
-    <div id="page-wrapper" class="page-wrapper">
-
-      <div class="page">
-        {{> header}}
-        <div id="menu-bar-hover-placeholder"></div>
-        <div id="menu-bar" class="menu-bar sticky bordered">
-          <div class="left-buttons">
-            <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
-              <i class="fa-list-ul"></i>
-            </button>
-            <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
-              <i class="fa-palette"></i>
-            </button>
-            <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-              <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
-            </ul>
-            {{#if search_enabled}}
-            <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
-              <i class="fa-magnifying-glass"></i>
-            </button>
-            {{/if}}
-          </div>
-
-          <div class="menu-title">{{ book_title }}</div>
-
-          <div class="right-buttons">
-            {{#if print_enable}}
-            <a href="{{ path_to_root }}print.html" title="Print this book" aria-label="Print this book">
-              <i id="print-button" class="fa-print"></i>
-            </a>
-            {{/if}}
-            {{#if git_repository_url}}
-            <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
-              <i id="git-repository-button" class="fa-github {{git_repository_icon}}"></i>
-            </a>
-            {{/if}}
-            {{#if git_repository_edit_url}}
-            <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
-              <i id="git-edit-button" class="fa-pen-to-square"></i>
-            </a>
-            {{/if}}
-
-          </div>
+    <div class="page">
+      {{> header}}
+      <div id="menu-bar" class="menu-bar">
+        <div class="left-buttons">
+          <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+            <i class="fa-list-ul"></i>
+          </button>
+          <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
+            <i class="fa-palette"></i>
+          </button>
+          <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
+            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
+          </ul>
+          {{#if search_enabled}}
+          <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
+            <i class="fa-magnifying-glass"></i>
+          </button>
+          {{/if}}
         </div>
 
-        {{#if search_enabled}}
-        <div id="search-wrapper" class="hidden">
-          <form id="searchbar-outer" class="searchbar-outer">
-            <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..."
-              aria-controls="searchresults-outer" aria-describedby="searchresults-header">
-          </form>
-          <div id="searchresults-outer" class="searchresults-outer hidden">
-            <div id="searchresults-header" class="searchresults-header"></div>
-            <ul id="searchresults"></ul>
-          </div>
+        <div class="menu-title">{{ book_title }}</div>
+
+        <div class="right-buttons">
+          {{#if print_enable}}
+          <a href="{{ path_to_root }}print.html" title="Print this book" aria-label="Print this book">
+            <i id="print-button" class="fa-print"></i>
+          </a>
+          {{/if}}
+          {{#if git_repository_url}}
+          <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
+            <i id="git-repository-button" class="fa-github {{git_repository_icon}}"></i>
+          </a>
+          {{/if}}
+          {{#if git_repository_edit_url}}
+          <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
+            <i id="git-edit-button" class="fa-pen-to-square"></i>
+          </a>
+          {{/if}}
+
         </div>
-        {{/if}}
+      </div>
 
-        <div id="content" class="content">
-          <div id="sidebar" class="sidebar" aria-label="Table of contents">
-            <nav class="sidebar-scrollbox">
-              {{#toc}}{{/toc}}
-            </nav>
-          </div>
+      {{#if search_enabled}}
+      <div id="search-wrapper" class="hidden">
+        <form id="searchbar-outer" class="searchbar-outer">
+          <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..."
+            aria-controls="searchresults-outer" aria-describedby="searchresults-header">
+        </form>
+        <div id="searchresults-outer" class="searchresults-outer hidden">
+          <div id="searchresults-header" class="searchresults-header"></div>
+          <ul id="searchresults"></ul>
+        </div>
+      </div>
+      {{/if}}
 
-          <main>
-            {{{ content }}}
+      <div id="content" class="content">
+        <spacer></spacer>
 
-            <nav class="nav-wrapper" aria-label="Page navigation">
-              {{#previous}}
-                <a rel="prev" href="{{ path_to_root }}{{link}}" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-                  <i class="fa-angle-left"></i>
-                </a>
-              {{/previous}}
+        <main>
+          {{{ content }}}
 
-              {{#next}}
-                <a rel="next" href="{{ path_to_root }}{{link}}" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                  <i class="fa-angle-right"></i>
-                </a>
-              {{/next}}
-            </nav>
-          </main>
+          <nav class="nav-wrapper" aria-label="Page navigation">
+            {{#previous}}
+              <a rel="prev" href="{{ path_to_root }}{{link}}" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                <i class="fa-angle-left"></i>
+              </a>
+            {{/previous}}
 
-          <spacer></spacer>
+            {{#next}}
+              <a rel="next" href="{{ path_to_root }}{{link}}" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                <i class="fa-angle-right"></i>
+              </a>
+            {{/next}}
+          </nav>
+        </main>
 
-          <div class="righttoc">
-            <nav class="pagetoc"></nav>
-          </div>
+        <spacer></spacer>
+
+        <div class="righttoc">
+          <nav class="pagetoc"></nav>
         </div>
       </div>
     </div>
