--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,7 +7,7 @@ $spacer-width: 5rem;
 
 $scrollbar-width: 7px;
 $menu-bar-height: 50px;
-$searchbar-max-width: 100rem;
+//$searchbar-max-width: 100rem;
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
 
