Would it look like a stylish site 👗 if the menu bar was casually transparent?
It surely would! 😆

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -12,6 +12,7 @@ a > .hljs {
   display: flex;
   background-color: var(--bg);
   z-index: 101;
+  opacity: 0.8;
 
   position: fixed;
   width: 100vw;
