--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,12 +1,11 @@
 $mobile-max-width: 680px;
+$enable-pagetoc: 760px;
 
-$sidebar-width: 210px;
+$sidebar-width: 200px;
 $pagetoc-width: 220px;
-$enable-pagetoc: $mobile-max-width + $pagetoc-width;
-$spacer-width: 5rem;
 
 $scrollbar-width: 7px;
-$menu-bar-height: 50px;
+$menu-bar-height: 45px;
 
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
