--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -7,7 +7,7 @@
     {{> head}}
 
     <meta name="description" content="{{ description }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <meta name="theme-color">
 
     <meta name="format-detection" content="telephone=no,email=no,address=no">
@@ -101,7 +101,7 @@
       </div>
 
       <div id="content" class="content">
-        <spacer></spacer>
+        <spacer class="left"></spacer>
 
         <main>
           {{{ content }}}
@@ -121,7 +121,7 @@
           </nav>
         </main>
 
-        <spacer></spacer>
+        <spacer class="right"></spacer>
 
         <div class="righttoc">
           <nav class="pagetoc"></nav>
