--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -212,8 +212,8 @@ mark {
 }
 
 .searchresults-outer {
-  max-width: 84vw;
-  height: 88vh;
+  min-width: 84vw;
+  max-height: 88vh;
   overflow-y: scroll;
 
   font-size: 1.3em;
@@ -222,10 +222,11 @@ mark {
   color: var(--fg);
   background: var(--bg);
 
-  margin-left: -9em;
+  margin: 0 2em 0 -9em;
+  padding: 8px;
+
   border: 2px solid var(--searchbar-border-color);
   border-radius: 16px;
-  padding: 8px;
 }
 
 ul {
