fix: The width of the main area differed from page to page 🐼
The width of the main display area was unintentionally inconsistent across pages.

--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -3,7 +3,7 @@
 @media only screen and (max-width: var.$enable-pagetoc) {
   .righttoc {
     display: none;
-    flex-basis: 0%;
+    flex-basis: 0em;
   }
 }
 
