fix: Sidebar background color is not displayed correctly 🐷
When a page with little main content is opened, the background color of the sidebar ceases to exist in the middle of the page.

--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -50,6 +50,7 @@ code {
 .page {
   display: flex;
   width: 100vw;
+  min-height: calc(100vh - var.$menu-bar-height);
   margin-top: var.$menu-bar-height;
 }
 
