--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -133,6 +133,7 @@
     <script src="{{ path_to_root }}elasticlunr.min.js"></script>
     <script src="{{ path_to_root }}mark.es6.min.js"></script>
     <script src="{{ path_to_root }}searcher.js" id="searcher" data-pathtoroot="{{ path_to_root }}"></script>
+    <script src="{{ path_to_root }}fzf.umd.js" id="searcher" data-pathtoroot="{{ path_to_root }}"></script>
     {{/if}}
 
     {{#if playground_copyable}}
