Adjustment the font-size of footnote (one more time...) 🦝
🦝 The size of the link text is somewhat unnatural, so we will suppress it a little!
🦝 I don't know why, but it seems that only `firefox` requires `margin-top`.

--- a/scss/_footnote.scss
+++ b/scss/_footnote.scss
@@ -2,12 +2,13 @@
 
 .footnote-definition {
   font-size: 0.7em;
+  margin-top: 0.4em;
 
   p {
     display: inline;
 
     & > a {
-      font-size: 1.2em;
+      font-size: 1.1em;
     }
   }
 
