It is more convenient to open the source repository of this site in a separate tab as well 🐏

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -81,7 +81,7 @@
           </a>
           {{/if}}
           {{#if git_repository_url}}
-          <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
+          <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository" target="_blank" rel="noopener">
             <i id="git-repository-button" class="fa-github {{git_repository_icon}}"></i>
           </a>
           {{/if}}
