Remove unnecessary parameters.

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -143,8 +143,8 @@
     {{#if search_js}}
     <script src="{{ path_to_root }}elasticlunr.min.js"></script>
     <script src="{{ path_to_root }}mark.es6.min.js"></script>
+    <script src="{{ path_to_root }}fzf.umd.js"></script>
     <script src="{{ path_to_root }}searcher.js" id="searcher" data-pathtoroot="{{ path_to_root }}"></script>
-    <script src="{{ path_to_root }}fzf.umd.js" id="searcher" data-pathtoroot="{{ path_to_root }}"></script>
     {{/if}}
 
     {{#if playground_copyable}}
