Apply part of `Catppuccin for mdBook` update 🎀
We have extracted and replaced elements from the previous version for elements that would have significantly changed the impression of the site, perhaps because we are accustomed to seeing what we have seen so far 🧚‍♀️

I'm trying to figure out if I should make everything compatible with `v0.2.0`...♟️

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -1,5 +1,10 @@
 @use '../variables' as var;
 
+.hljs {
+  display: block;
+  overflow-x: auto;
+}
+
 #searchresults a,
 .content main a:link,
 a:visited,
