--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -248,8 +248,8 @@ ul {
         font-size: 0.8em;
 
         em {
+          background: linear-gradient(rgba(0,0,0,0) 80%, var(--search-mark-bg));
           font-weight: bold;
-          font-style: normal;
         }
       }
     }
