PWA installation on chromium-based browsers is now supported 📥
...Probably 😅
At least, Brave Browser has confirmed that the install icon appears in the address bar on the top page.

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="{{ path_to_root }}css/general.css">
     <link rel="stylesheet" href="{{ path_to_root }}css/chrome.css">
 
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <noscript>
